Patch for compilation

--- a/test/nginx.conf
+++ b/test/nginx.conf
@@ -15,6 +15,7 @@ http {
         listen       4242;
         server_name  localhost;
        
+       	responsive on;
         location / {
            	root   test;
            	index  index.html;
